@startuml State Diagram - Stany magazynowe

!theme plain
skinparam state {
    BackgroundColor<<available>> LightGreen
    BackgroundColor<<reserved>> LightBlue
    BackgroundColor<<transit>> LightYellow
    BackgroundColor<<problem>> LightCoral
}

title Diagram Stanow - Cykl zycia stanu magazynowego (InventoryItem)

[*] --> AVAILABLE : Przyjecie towaru\ndo magazynu

state AVAILABLE <<available>> {
    AVAILABLE : Towar dostepny
    AVAILABLE : do pobrania
    AVAILABLE : --
    AVAILABLE : quantity > 0
    AVAILABLE : reservedQuantity = 0
}

AVAILABLE --> RESERVED : Utworzenie zlecenia\nwydania/kompletacji
AVAILABLE --> IN_TRANSIT : Rozpoczecie\nprzeniesienia
AVAILABLE --> DAMAGED : Wykrycie\nuszkodzenia
AVAILABLE --> EXPIRED : Przekroczenie\ndaty waznosci
AVAILABLE --> QUARANTINE : Wstrzymanie\ndo kontroli
AVAILABLE --> [*] : Calkowite wydanie\n(quantity = 0)

state RESERVED <<reserved>> {
    RESERVED : Towar zarezerwowany
    RESERVED : dla zlecenia
    RESERVED : --
    RESERVED : reservedQuantity > 0
    RESERVED : Oczekuje na kompletacje
}

RESERVED --> AVAILABLE : Anulowanie\nzlecenia
RESERVED --> IN_TRANSIT : Pobranie towaru\n(rozpoczecie kompletacji)
RESERVED --> [*] : Wydanie towaru\n(realizacja zlecenia)

state IN_TRANSIT <<transit>> {
    IN_TRANSIT : Towar w trakcie
    IN_TRANSIT : przenoszenia
    IN_TRANSIT : --
    IN_TRANSIT : Miedzy lokalizacjami
    IN_TRANSIT : lub w kompletacji
}

IN_TRANSIT --> AVAILABLE : Zakonczenie\nprzeniesienia
IN_TRANSIT --> DAMAGED : Uszkodzenie\nw transporcie
IN_TRANSIT --> [*] : Wydanie\nz magazynu

state DAMAGED <<problem>> {
    DAMAGED : Towar uszkodzony
    DAMAGED : --
    DAMAGED : Wymaga decyzji:
    DAMAGED : utylizacja/naprawa/zwrot
}

DAMAGED --> QUARANTINE : Przeniesienie\ndo kwarantanny
DAMAGED --> [*] : Utylizacja\nlub zwrot

state EXPIRED <<problem>> {
    EXPIRED : Towar przeterminowany
    EXPIRED : --
    EXPIRED : Data waznosci
    EXPIRED : przekroczona
}

EXPIRED --> QUARANTINE : Przeniesienie\ndo kwarantanny
EXPIRED --> [*] : Utylizacja

state QUARANTINE <<problem>> {
    QUARANTINE : Towar w kwarantannie
    QUARANTINE : --
    QUARANTINE : Kontrola jakosci
    QUARANTINE : lub weryfikacja
}

QUARANTINE --> AVAILABLE : Pozytywna\nweryfikacja
QUARANTINE --> DAMAGED : Wykrycie\nuszkodzen
QUARANTINE --> [*] : Utylizacja\nlub zwrot

note right of AVAILABLE
  **Operacje:**
  - Rezerwacja dla zlecenia
  - Przeniesienie
  - Korekta stanu
  - Wydanie
end note

note right of RESERVED
  **Automatyczne:**
  System rezerwuje
  przy tworzeniu zlecenia
  OUTBOUND/PICK
end note

note bottom of EXPIRED
  **Automatyczne:**
  System sprawdza
  expirationDate
  codziennie
end note

@enduml
